lib/tools/orbit/test_output/advanced_runcore_test.output
Flow compiler (3rd generation)

Processing 'orbit' on http server

tests/advanced_runcore_test.orb: tests/advanced_runcore_test.orb:18:17: Parse error
let mod_res = a % b;  // Modulo operation
                ^
